--- a/dwh-newinstall-deb/pom.xml
+++ b/dwh-newinstall-deb/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>dwh-newinstall-deb</artifactId>
-	<version>${project.parent.version}</version>
+	<version>1.5</version>
 
 	<parent>
 		<groupId>org.aktin.dwh</groupId>
 		<artifactId>server</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.5</version>
 	</parent>
 
 	<build>
