--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.aktin.dwh</groupId>
 	<artifactId>server</artifactId>
-	<version>1.6-SNAPSHOT</version>
+	<version>1.5</version>
 
 	<name>AKTIN : DWH Server</name>
 	<description>Installation and updates for the AKTIN DWH Server</description>
@@ -17,7 +17,7 @@
 
 	<properties>
 		<!-- build versions -->
-		<version_dwh>1.5-SNAPSHOT</version_dwh>
+		<version_dwh>1.5</version_dwh>
 		<verison_dwh_ontology>0.15</verison_dwh_ontology>
 		<version_dwh_import>0.15</version_dwh_import>
 
